objects/Account.object
<CustomObject><fields>
        <fullName>Academic_Program_Type__c</fullName>
        <label>Academic Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>AppointmentLength__c</fullName>
        <description>Duration of appointment (In Minutes)</description>
        <inlineHelpText>Duration of appointment (In Minutes)</inlineHelpText>
        <label>Appointment Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Appointments_visible_for_number_of_days__c</fullName>
        <label>Appointments visible for number of days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>BusinessHour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business hours to be followed for this account</description>
        <label>Business Hour</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>CASA_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Related to Appointment status functionality.</description>
        <label>CASA Account</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CASA_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for Accounts that serve as a resource for CASA referrals</description>
        <label>CASA Referral</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Center__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Supports availability functionality</description>
        <label>Center</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Current_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Program</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Current_Term_Child_Center__c</fullName>
        <description>to identify current term name at Learning/Writing/Speaking Center</description>
        <formula>Parent.Parent.Current_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Term Child Center</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Current_Term_Parent_Center__c</fullName>
        <formula>Parent.Current_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Term Parent Center</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Current_Term__c</fullName>
        <label>Current Term</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Degree_Code__c</fullName>
        <label>Degree Code</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>175</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Frequencyperday__c</fullName>
        <label>Frequency/day/subject</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Frequencyperweek__c</fullName>
        <label>Frequency/week/subject</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>LWC_Account_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LWC Account</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>LeadTime__c</fullName>
        <inlineHelpText>Time(in HOURS) before the End Time of the appointment until you can book/cancel appointment.</inlineHelpText>
        <label>Lead Time</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Program_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Assistant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Program Assistant)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Program_Level__c</fullName>
        <label>Program Level</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Student_Missed_Per_Center__c</fullName>
        <label>Student Missed Per Center</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Welcome_Message__c</fullName>
        <label>Welcome Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields><compactLayoutAssignment>hed__HEDA_Account_Compact_Layout</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews><listViews>
        <fullName>CASA_Referral_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASA_Referral__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASA_Referral__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CASA Referral Accounts</label>
    </listViews><listViews>
        <fullName>CenterAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASA_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Center__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Center Accounts</label>
    </listViews><listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews><recordTypes>
        <fullName>Academic_Program</fullName>
        <active>true</active>
        <description>An Academic Program offered at the University.</description>
        <label>Academic Program</label>
    </recordTypes><recordTypes>
        <fullName>Administrative</fullName>
        <active>true</active>
        <description>An administrative account.</description>
        <label>Administrative</label>
    </recordTypes><recordTypes>
        <fullName>Business_Organization</fullName>
        <active>true</active>
        <description>A business organization.</description>
        <label>Business Organization</label>
    </recordTypes><recordTypes>
        <fullName>Educational_Institution</fullName>
        <active>true</active>
        <description>An educational institution.</description>
        <label>Educational Institution</label>
    </recordTypes><recordTypes>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>A Household containing one or more individuals.</description>
        <label>Household Account</label>
    </recordTypes><recordTypes>
        <fullName>Sports_Organization</fullName>
        <active>true</active>
        <description>A sports organization.</description>
        <label>Sports Organization</label>
    </recordTypes><recordTypes>
        <fullName>University_Department</fullName>
        <active>true</active>
        <description>A department in the university.</description>
        <label>University Department</label>
    </recordTypes></CustomObject>